aligning of message is solved

--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ main {
 .message {
   position: absolute;
   height: 21px;
-  left: 37%;
+  left: 41%;
   top: 61%;
   font-family: Nunito;
   font-style: normal;
